First commited as before_48939_rev5